--- a/WebContent/assets/css/web/main.css
+++ b/WebContent/assets/css/web/main.css
@@ -126,6 +126,14 @@ h4 {
 
 }
 /* estilos para seccion conocenos_twitter */
+
+#conocenos .col.s5 {
+	height: 400px;
+}
+
+#conocenos img {
+	height:140px;
+}
 	
 	#conocenos h6 {
 		padding-top: 18px; 
@@ -133,6 +141,35 @@ h4 {
 		font-weight: bold; 
 		text-transform: uppercase;
 	}
+
+.cube {
+	padding-top: 20px;
+	position: relative;
+	margin: 0 auto;
+	height: 340px;
+	width: 100%;
+	-webkit-transform-style: preserve-3d;
+	-webkit-transition: all 2s ease;
+	transform-style: preserve-3d;
+	transition: all 2s ease;
+}
+
+.face {
+  position: absolute;
+  height: 316px;
+  width: 100%;
+  background-color: white;
+}
+
+.cube .col.block-ellipsis {
+	text-align: initial;	
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	height: 118px;
+}
+
 
 /* estilos para seccion eventos */
 
@@ -148,10 +185,13 @@ h4 {
 	}
 	
 	#eventos .subtitulo {
-		font-size: 1.3em;
-		font-weight: bold;
 		color: #8ac7de;
 		text-transform: uppercase;
+	}
+	
+	#eventos .subtitulo span{
+		font-size: 1.1em;
+		font-weight: bold;
 	}
 	
 	#eventos .info {
@@ -175,11 +215,20 @@ h4 {
 	#participa .seccion {
 		padding-top: 20px;
 	}
+	
+	#participa .subtitulo {
+		color: #8ac7de;
+		text-transform: uppercase;
+	}
 
+	#participa .subtitulo span{
+		font-size: 1.1em;
+		font-weight: bold;
+	}
 
-.col.s6.participa,.col.s6.eventos {
-	padding: 0;
-}
+	.col.s6.participa,.col.s6.eventos {
+		padding: 0;
+	}
 
 /* Menu flotante */
 	.social .icon span {
@@ -246,12 +295,7 @@ h4 {
 		padding: 15px 0;
 	}
 	
-	#galeria img {
-		margin: 0 auto;	
-		margin-top: 30px;
-	}
-	
-	#galeria .col.s12 {
+	#galeria {
 		position: relative;
 	}
 	
@@ -261,16 +305,27 @@ h4 {
 	    left: 38%;
 	    color: yellow;
 	    text-transform: uppercase;
-	    width: 100px;
+	    width: 67px;
+	    font-weight: bold;
+	    background-color:rgba(0, 0, 0, 0.5);
+	    padding: 0 5px;
 	}
 	
-	#galeria .col.s12:hover {
-		opacity: .5;
+	#galeria .carousel span:hover {
 		cursor: pointer;
 	}
 	
 	#galeria>div.s5 {
 		padding:0px;
+	}
+	
+	#galeria .carousel {
+		height: 300px;
+	}
+	
+	#galeria .carousel .carousel-item {
+	    width: 64%;
+	    margin-left: -15%;
 	}
 
 /* estilos para seccion comunidad */
