modal y algunos detalles en el main

--- a/WebContent/assets/css/web/main.css
+++ b/WebContent/assets/css/web/main.css
@@ -164,6 +164,7 @@ h4 {
 .cube .col.block-ellipsis {
 	text-align: initial;	
 	display: -webkit-box;
+	-webkit-line-clamp: 6;
 	-webkit-box-orient: vertical;
 	overflow: hidden;
 	text-overflow: ellipsis;
