--- a/WebContent/views/web/main.zul
+++ b/WebContent/views/web/main.zul
@@ -312,9 +312,8 @@
 										<div class="subtitulo text-center">
 						           			<span>VOLUNTARIADO</span>
 						       			</div>
-						       			<div class="info">
-									        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-												sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
+						       			<div class="info block-ellipsis">
+									        <span>El Voluntariado de la Fundación Amigos del Niño con Cáncer  Lara (FANCA), lo integra un grupo de personas que de forma altruista están comprometidas con las acciones dirigidas a la atención integral a niños y  adolecentes con cáncer  y, su familia. La acción voluntaria debe ser solidaria, intencionada, organizada, sistemática y  respaldada por nuestros valores:
 						        			</span>
 							          	</div>
 									</div>
@@ -324,9 +323,8 @@
 										<div class="subtitulo text-center">
 						           			<span>PADRINOS</span>
 						       			</div>
-						       			<div class="info">
-						       				<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-												sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
+						       			<div class="info block-ellipsis">
+						       				<span>Te brinda la oportunidad de participar en la recuperación de los niños con cáncer, de escasos recursos, mediante una colaboración monetaria para ayudarlos
 						        			</span>
 								        </div>
 									</div>
@@ -336,7 +334,7 @@
 										<div class="subtitulo text-center">
 						           			<span>DONACIONES</span>
 						       			</div>
-						       			<div class="info">
+						       			<div class="info block-ellipsis">
 						       				<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
 												sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
 						        			</span>
