--- a/WebContent/assets/css/web/participa.css
+++ b/WebContent/assets/css/web/participa.css
@@ -61,16 +61,22 @@ a:hover,a:focus {
 	padding: 0px;
 }
 div.barra-verde span {
+	
 	font-weigth: bold;
-	padding-top: 5px;
+	padding-top: 7px;
 	color: #87796F;
 }
-
+.z-button {
+     color:  #FFF !important;
+     background-color:#044159 !important;
+}
 div.barra-verde {
 	width: 100%;
-	/* 	height: 40px; */
+		height: 40px !important; 
 	background-color: #d9eb52;
 	color: #F26B7A;
+	padding-top:13px;
+	
 }
 element.style {
 	/* 	height: 200px; */
@@ -106,22 +112,20 @@ element.style {
 }
 
 .requisitos span {
-	
-	color: #87796f;
-	font-weigth: bold;
-	padding:110px;
-	text-align: center;
-	text: justify;
+    color: #87796f;
+    font-weigth: bold;
+    /* padding: 110px; */
+  
 }
 .seccion {
 	margin-top: 20px;
 }
 
+
 .info span{
 	
-	align:justify; 
 	text-align: justify;
-	text: justify;
+
 }
 
 .tabsitos a span {
