--- a/WebContent/views/web/album.zul
+++ b/WebContent/views/web/album.zul
@@ -150,59 +150,14 @@
 						<span sclass="fa fa-star-o fa-2x"></span>
 						<span class="email">annitagil@gmail.com</span>
 					</div>								
-				</div>
-				<div class="col s12">
-					<button class="waves-effect waves-light btn" href="">
+				</div>				
+				<div class="col s12" apply="org.zkoss.bind.BindComposer"
+		viewModel="@id('vm') @init('ve.smile.web.viewmodels.VM_AbrirPostulado')">
+					<button class="waves-effect waves-light btn" href="" onClick="@command('abrirComentar')">
 						comentar
 					</button>
 				</div>				
 			</div>
 		</div>
 	</div>
-	<n:div id="modalFormComentarios">
-		<div class="container">
-			<div class="row">
-				<div sclass="col s12 close">
-					<span>x</span>
-				</div>
-				<div sclass="col s12 text-center">
-					<n:h6>Plantea tu comentario aquí</n:h6>
-				</div>
-				<div sclass="col s8 form">
-					<div class="input-field col s12">
-						<n:label for="nombres">Nombres:</n:label>
-						<textbox id="nombres" type="text"></textbox>
-					</div>
-					<div class="input-field col s12">
-						<n:label for="correo">Correo:</n:label>
-						<textbox id="correo" type="text"></textbox>
-					</div>
-					<div class="input-field col s12">
-						<n:label for="asunto">Comentario:</n:label>
-						<textbox id="asunto" type="text"></textbox>
-					</div>
-					<div sclass="col s12">
-						<span>Califica este evento:</span>
-					</div>
-					<div class="col s12 star">
-						<span sclass="fa fa-star-o fa-2x"></span>
-						<span sclass="fa fa-star-o fa-2x"></span>
-						<span sclass="fa fa-star-o fa-2x"></span>
-						<span sclass="fa fa-star-o fa-2x"></span>
-						<span sclass="fa fa-star-o fa-2x"></span>
-					</div>
-				</div>		
-				<div class="col s4">
-					<image src="/imagenes/portal/conejo.png"></image>
-				</div>			
-				<div id="divButtonsForm" sclass="row">
-					<div class="col s12 text-center">
-						<button class="waves-effect waves-light btn" href="">
-							aceptar
-						</button>
-					</div>
-				</div>
-			</div>
-		</div>
-	</n:div>
 </zk>
