--- a/WebContent/views/web/participa.zul
+++ b/WebContent/views/web/participa.zul
@@ -118,11 +118,12 @@
 									</span>
 									<n:br />
 									<n:br />
-									<div class="boton text-center">
+									<div class="boton text-center" apply="org.zkoss.bind.BindComposer"
+		viewModel="@id('vm') @init('ve.smile.web.viewmodels.VM_AbrirPostulado')">
 										<button type="button"
-											class="waves-effect waves-light btn">
+											class="waves-effect waves-light btn" href="" onClick="@command('abrirPostular')">
 											PARTICIPA
-										</button>
+										</button>										
 									</div>
 								</div>
 							</div>
@@ -226,9 +227,10 @@
 									</span>
 	<n:br />
 		<n:br />
-									<div class="boton text-center">
+									<div class="boton text-center" apply="org.zkoss.bind.BindComposer"
+										viewModel="@id('vm') @init('ve.smile.web.viewmodels.VM_AbrirPostulado')">
 										<button type="button"
-											class="waves-effect waves-light btn">
+											class="waves-effect waves-light btn" href="" onClick="@command('abrirPostular')">
 											PARTICIPA
 										</button>
 									</div>
