--- a/WebContent/views/web/participa.zul
+++ b/WebContent/views/web/participa.zul
@@ -121,7 +121,7 @@
 									<div class="boton text-center" apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.web.viewmodels.VM_AbrirPostulado')">
 										<button type="button"
-											class="waves-effect waves-light btn" href="" onClick="@command('abrirPostular')">
+											class="waves-effect waves-light btn" href="" onClick="@command('abrirPostularVoluntario')">
 											PARTICIPA
 										</button>										
 									</div>
@@ -230,7 +230,7 @@
 									<div class="boton text-center" apply="org.zkoss.bind.BindComposer"
 										viewModel="@id('vm') @init('ve.smile.web.viewmodels.VM_AbrirPostulado')">
 										<button type="button"
-											class="waves-effect waves-light btn" href="" onClick="@command('abrirPostular')">
+											class="waves-effect waves-light btn" href="" onClick="@command('abrirPostularPadrino')">
 											PARTICIPA
 										</button>
 									</div>
